# TP-Multithreading

./: .pre-commit-con  .pre-commit-config.y  low_level.cpp  pyproject.toml  test_task.py
.github/workflows/: ci.yml
