[project]
name = "tp-multithreading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
]

[tool.uv.workspace]
members = [
    "tp-multithreading",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
